--- a/EVALUA3CINTIADIAZ/ProyRestMatrizArray/Properties/Resources.resx
+++ b/EVALUA3CINTIADIAZ/ProyRestMatrizArray/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="logo_instituto_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo instituto 2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="profe_luis" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\profe luis.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="triangle-abstract-gradient-soft-gradient-wallpaper-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\triangle-abstract-gradient-soft-gradient-wallpaper-preview.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
